fe-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: online-shop-frontend-deployment
  labels:
    app: online-shop-frontend
  namespace: online-shop
spec:
  replicas: 1
  selector:
    matchLabels:
      app: online-shop-frontend
  template:
    metadata:
      labels:
        app: online-shop-frontend
    spec:
      containers:
      - name: online-shop-frontend
        image: dynamic_image
        ports:
        - containerPort: 80
        resources:
          requests:
            memory: 256Mi
      imagePullSecrets:
      - name: auth-registry
