fe-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: online-shop-frontend-ingress
  namespace: online-shop
spec:
  ingressClassName: nginx
  rules:
  - host: "carwyn.onlineshop.tech"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: online-shop-frontend-service
            port:
              number: 80
